Add new MPU9250 files and refactor over CMakeList

--- a/Tesis/main/CMakeLists.txt
+++ b/Tesis/main/CMakeLists.txt
@@ -2,6 +2,7 @@ idf_component_register(
         SRCS    "main.c"
                 "wifi/wifi.c"
                 "file_server/file_server.c"
-                "mpu_9250/acelerometroI2C.c"
+                "mpu_9250/mpu9250.c"
                 "GPIO/GPIO.c"
-                "sd_card/sd_card.c")
+                "sd_card/sd_card.c"
+                )
