Add ADC directory and begin implementation

--- a/Tesis/main/CMakeLists.txt
+++ b/Tesis/main/CMakeLists.txt
@@ -4,5 +4,6 @@ idf_component_register(
                 "file_server/file_server.c"
                 "mpu_9250/mpu9250.c"
                 "button/button.c"
+                "adc/adc.c"
                 "sd_card/sd_card.c"
                 )
