Configure WDT for all the project

--- a/Tesis/main/CMakeLists.txt
+++ b/Tesis/main/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(
                 "file_server/file_server.c"
                 "mpu_9250/mpu9250.c"
                 "button/button.c"
+                "watchdog/watchdog.c"
                 "adc/adc.c"
                 "sd_card/sd_card.c"
                 )
