--- a/Tesis/main/CMakeLists.txt
+++ b/Tesis/main/CMakeLists.txt
@@ -9,4 +9,6 @@ idf_component_register(
                 "sd_card/sd_card.c"
                 "mqtt/mqtt.c"
                 "data_packets/data_packet.c"
+                "rtc/rtc.c"
+                "directory_manager/directory_manager.c"
                 )
